# doon

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt  map
.github/workflows/: c-cpp.yml  cmake.yml
assets/: main.map  s.map
engine/: CMakeLists.txt  Makefile
engine/include/: DepthBuffer.hpp  Engine.hpp  Frame.hpp  FrameLimiter.hpp  Loader.hpp  Logger.hpp  Map.hpp  MapManager.hpp  ObjectManager.hpp  Pixel.hpp  Ray.hpp  RenderManager.hpp  Renderer.hpp  StorageManager.hpp  ThreadManager.hpp  ThreadedQ.hpp  Vector.hpp
engine/include/abstract/: AObject.hpp  AShoot.hpp
engine/include/interface/: IGame.hpp  IMap.hpp
engine/source/: DepthBuffer.cpp  Frame.cpp  Loader.cpp  Logger.cpp  Map.cpp  MapManager.cpp  ObjectManager.cpp  Ray.cpp  RenderManager.cpp  Renderer.cpp  StorageManager.cpp  ThreadManager.cpp  lib.cpp
include/: Coords.hpp  DepthBuffer.hpp  Frame.hpp  FrameLimiter.hpp  GameInstance.hpp  Logger.hpp  Map.hpp  MapManager.hpp  Object.hpp  ObjectManager.hpp  Pixel.hpp  Player.hpp  Renderer.hpp  Snitch.hpp  Storage.hpp  ThreadPool.hpp  ThreadedQ.hpp  VulkanWrapper.hpp  concepts.hpp
include/abstract/: ADestructible.hpp  ALife.hpp  AObject.hpp  AShoot.hpp  AThreaded.hpp
include/interface/: AThreaded.hpp  ICollision.hpp  IMovement.hpp  IObject.hpp  IShoot.hpp  IThreaded.hpp
include/objects/: Barrel.hpp  Fireball.hpp  Poggers.hpp
lib/: CMakeLists.txt
lib/vulkan-lib/: CMakeLists.txt
lib/vulkan-lib/include/vulak/: DeletionQueue.hpp  Device.hpp  Pipeline.hpp  Window.hpp
lib/vulkan-lib/source/: DeletionQueue.cpp  Device.cpp  Pipeline.cpp  Window.cpp
shaders/: simple_shader.vert
source/: DeletionQueue.cpp  DepthBuffer.cpp  Frame.cpp  GameInstance.cpp  Logger.cpp  Map.cpp  MapManager.cpp  ObjectManager.cpp  Player.cpp  Renderer.cpp  Storage.cpp  ThreadPool.cpp  VulkanWrapper.cpp  main.cpp
source/objects/: Barrel.cpp  Fireball.cpp  Poggers.cpp
